feat: plugin unit tests (#33)
* add unit tests, ci job, docs, and task

* chore add logging back in

* fix dockerfile

* remove dependency question from pom

* format newlines

* fix: broken registration form